@@ -1528,17 +1528,27 @@ typedef z_stream FAR *  png_zstreamp;
  * version 1.2.41.
  */
 #ifdef __GNUC__
-#  define PNG_DEPRECATED __attribute__((__deprecated__))
-#  define PNG_USE_RESULT __attribute__((__warn_unused_result__))
-#  define PNG_NORETURN   __attribute__((__noreturn__))
-#  define PNG_ALLOCATED  __attribute__((__malloc__))
+#  ifndef PNG_DEPRECATED
+#    define PNG_DEPRECATED __attribute__((__deprecated__))
+#  endif
+#  ifndef PNG_USE_RESULT
+#    define PNG_USE_RESULT __attribute__((__warn_unused_result__))
+#  endif
+#  ifndef PNG_NORETURN
+#    define PNG_NORETURN   __attribute__((__noreturn__))
+#  endif
+#  ifndef PNG_ALLOCATED
+#    define PNG_ALLOCATED  __attribute__((__malloc__))
+#  endif
 
 #  ifndef PNG_CONFIGURE_LIBPNG
-   /* This specifically protects structure members that should only be
-    * accessed from within the library, therefore should be empty during
-    * a library build.
-    */
-#    define PNG_DEPSTRUCT  __attribute__((__deprecated__))
+    /* This specifically protects structure members that should only be
+     * accessed from within the library, therefore should be empty during
+     * a library build.
+     */
+#    ifndef PNG_DEPSTRUCT
+#      define PNG_DEPSTRUCT  __attribute__((__deprecated__))
+#    endif
 #  endif
 #endif
 
